<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="app_list_title">My Nanodegree Apps!</string>
    <string name="app_1_title">SPOTIFY STREAMER</string>
    <string name="app_2_title">SCORES APP</string>
    <string name="app_3_title">LIBRARY APP</string>
    <string name="app_4_title">BUILD IT BIGGER</string>
    <string name="app_5_title">XYZ READER</string>
    <string name="capston_title">CAPSTONE MY OWN APP</string>

    <string name="action_settings">Settings</string>
</resources>
