<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/app_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/listTitle"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginBottom="16dp" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/listTitle"
        android:layout_alignParentStart="true"
        android:padding="3dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:stretchColumns="*" >
        <TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:visibility="invisible"
                android:enabled="false"
                android:text="@string/app_2_title"
                android:id="@+id/placeHolderButton1"
                style="@style/portfoliButton"
                android:layout_span="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_1_title"
                android:id="@+id/app1Button"
                style="@style/portfoliButton"
                android:layout_span="1" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:visibility="invisible"
                android:text="@string/app_2_title"
                android:id="@+id/placeHolderButton2"
                style="@style/portfoliButton"
                android:layout_span="1" />

        </TableRow>
        <TableRow>
            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_span="3" />
        </TableRow>
        <TableRow>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:text="@string/app_2_title"
                android:id="@+id/app2Button"
                style="@style/portfoliButton"
                android:layout_span="1" />


        </TableRow>
        <TableRow>
            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_span="3"  />
        </TableRow>

        <TableRow>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:text="@string/app_3_title"
                android:id="@+id/app3Button"
                style="@style/portfoliButton"
                android:layout_span="1" />


        </TableRow>
        <TableRow>
            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_span="3"/>
        </TableRow>

        <TableRow>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:text="@string/app_4_title"
                android:id="@+id/app4Button"
                style="@style/portfoliButton"
                android:layout_span="1" />


        </TableRow>
        <TableRow>
            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_span="3" />
        </TableRow>

        <TableRow>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:text="@string/app_5_title"
                android:id="@+id/app5Button"
                style="@style/portfoliButton"
                android:layout_span="1" />


        </TableRow>
        <TableRow>
            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_span="3" />
        </TableRow>

        <TableRow>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_column="1"
                android:text="@string/capston_title"
                android:id="@+id/capstonButton"
                style="@style/capstonButton"
                android:layout_span="1" />


        </TableRow>

    </TableLayout>

</RelativeLayout>
